Add and configure Spring Boot Configuration Processor

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Import Spring Boot Configuration Processor -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -69,6 +75,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- Prevent repackage goal from adding spring-boot-configuration-processor
+					dependency into fat jar  -->
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-configuration-processor</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
