--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,6 @@
+# bootstrap.properties for importing config props from Spring Cloud Config Server
 spring.application.name=limit-service
+# Get config properties for limit-service from Spring Cloud Config Server
 spring.cloud.config.uri=http://localhost:8888
+# Use "dev" config profile
+spring.profiles.active=dev
