Expose actuator endpoints for distributed system management

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,3 +3,8 @@ spring.application.name=limit-service
 
 limit-service.minimum=1
 limit-service.maximum=1000
+
+# Expose actuator endpoints for hot reload of properties from Spring Cloud Config Server
+# Use Spring Cloud Bus to hit all instances with single request URI
+# URI to refresh config props: http://localhost:8080/actuator/bus-refresh
+management.endpoints.web.exposure.include=*
